--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,22 @@
-theme: jekyll-theme-minimal
-title: EMC-Viroscience's homepage
-description: Bookmark this to keep an eye on workflow manuals!
+project:
+  type: website
+  output-dir: docs  # Important for GitHub Pages
+
+website:
+  title: "EMC Viroscience Homepage"
+  navbar:
+    left:
+      - text: "Home"
+        href: index.html
+      - text: "About"
+        href: about.qmd   # Link to about page
+  sidebar:
+    style: "docked"
+    contents:
+      - section: "Posts"
+        contents:
+          - posts/*.qmd  # Automatically include all .qmd files in the posts folder in the sidebar
+
+format:
+  html:
+    theme: cosmo  # Or a theme of your choice (e.g., "default", "quartz", "minty", "darkly")
