--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,3 @@
-project:
-  type: website
-  output-dir: docs  # Important for GitHub Pages
-
-website:
-  title: "EMC Viroscience Homepage"
-  navbar:
-    left:
-      - text: "Home"
-        href: index.html
-      - text: "About"
-        href: about.qmd   # Link to about page
-  sidebar:
-    style: "docked"
-    contents:
-      - section: "Posts"
-        contents:
-          - posts/*.qmd  # Automatically include all .qmd files in the posts folder in the sidebar
-
-format:
-  html:
-    theme: cosmo  # Or a theme of your choice (e.g., "default", "quartz", "minty", "darkly")
+theme: jekyll-theme-minimal
+title: EMC Viroscience Homepage
+description: Bookmark this to keep an eye on workflow manuals!
