--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "EMC Viroscience Homepage" # Changed title here
+  title: "EMC Viroscience"
   navbar:
     left:
       - text: "Home"
