--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,7 @@ website:
     contents:
       - section: "Posts"
         contents:
-          - /*.qmd
+          - auto: posts/*.qmd
           
 format:
   html:
