--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,12 +5,24 @@ project:
 website:
   title: "EMC Viroscience"
   page-navigation: true
+  
   navbar:
     left:
       - text: "Home"
         href: index.html
       - text: "About"
         href: about.html
+    tools:
+      - icon: github
+        menu:
+          - text: Source code
+            url: https://github.com/LucvZon/EMC-Viroscience.github.io
+          - text: Report a bug
+            url: https://github.com/LucvZon/EMC-Viroscience.github.io/issues/new?assignees=&labels=bug&projects=&template=bug-report.yml&title=bug
+          - text: Report a documentation issue
+            url: https://github.com/LucvZon/EMC-Viroscience.github.io//issues/new?assignees=&labels=documentation&projects=&template=docs-issue.yml&title=docs
+          - text: Submit a feature request
+            url: https://github.com/LucvZon/EMC-Viroscience.github.io/issues/new?assignees=&labels=enhancement&projects=&template=feature-request.yml&title=feat
       
   sidebar: # Define a list of sidebar configurations
     - id: id-home
