--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,11 +29,11 @@ jobs:
         uses: actions/checkout@v4 # Checks out your repository code
 
       - name: Set up Quarto
-        uses: quarto-dev/quarto-actions/setup@v2
+        uses: quarto-dev/quarto-cli-action@v2
         with:
           # Optional: Specify a Quarto version, or leave blank for latest
           # version: 1.4.549 
-          version: latest
+          version: 1.6.40
 
       # Optional: Add steps here to install R, Python, or other dependencies
       # if your Quarto documents require code execution.
