--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,9 @@ jobs:
         uses: actions/checkout@v4 
 
       - name: Set up Quarto
-        uses: quarto-dev/quarto-cli-action@main # Or back to @v2 if @main didn't work
-        with:
-          version: 1.6.40
-
+        uses: quarto-dev/quarto-actions/setup@v2
+        # No 'with:' block needed for this older action usually
+        
       # Comment out subsequent steps for now
       # - name: Render Quarto Website
       #   run: quarto render 
