--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,16 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           version: 1.6.40 # Keep this specific version
+          
+      # --------------------------------------------------------
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10' # Or any recent version
+
+      - name: Install Python dependencies
+        run: pip install requests
+      # --------------------------------------------------------
 
       - name: Render Quarto Website
         run: quarto render
