--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
           python-version: '3.10' # Or any recent version
 
       - name: Install Python dependencies
-        run: pip install requests
+        run: pip install requests pyyaml
       # --------------------------------------------------------
 
       - name: Render Quarto Website
