--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,7 +1,7 @@
 project:
   type: website
   output-dir: docs
-  pre-render: generate_repo_files.py
+  pre-render: generate_repo_listing.py
 
 website:
   title: ""
@@ -9,7 +9,7 @@ website:
   favicon: images/emc_favicon.png
   
   page-footer: 
-    center: "[CC-BY 4.0 License](LICENSE.md)"
+    center: "[CC0 1.0 License](LICENSE.md)"
   
   navbar:
     right:
